<resources>
    <string name="app_name">MainApp</string>
    <string name="settings">Settings</string>
    <string name="house">house</string>
    <string name="box">box</string>
    <string name="name_rachel_green">Name: Rachel Green</string>
    <string name="agent_rachel_green">Agent: Rachel Green</string>
    <string name="uid_k84483m">UID: K84483M</string>
    <string name="bio">Bio: ......</string>
    <string name="edit">Edit</string>
    <string name="change_contact_information">Change Contact Information</string>
    <string name="propnow">| PropNow</string>
    <string name="notifications">Notifications</string>
    <string name="change_font_size">Change Font size</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="edit_information_of_second_buyer">Edit information of second buyer</string>
    <string name="delete_account">Delete Account</string>
    <string name="backbutton">backbutton</string>
    <string name="id">stringg</string>
    <string name="string_id">\@string/id</string>
    <string name="string_backbutton">\@string/backbutton</string>
    <string name="my_listings">My Listings</string>
    <string name="blk_76_08_456">Blk 76, #08-456</string>
    <string name="nearest_mrt_clementi">Nearest MRT: Clementi</string>
    <string name="lorong_6_toa_payoh">Lorong 6, Toa payoh</string>
    <string name="west_coast_road">West Coast Road</string>
    <string name="bedrooms_4">Bedrooms: 4</string>
    <string name="bedrooms_3">Bedrooms: 3</string>
    <string name="blk_55_05_56">Blk 55, #05-56</string>
    <string name="nearest_mrt_toa_payoh">Nearest MRT: Toa Payoh</string>
    <string name="pic">pic</string>
    <string name="back">back</string>
    <string name="pic2">pic2</string>
    <string name="add">add</string>
    <string name="del">del</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="type_of">Type of</string>
    <string name="employment">employment</string>
    <string name="date">Date</string>
    <string name="buyer_2">Buyer 2</string>
    <string name="balance">Balance</string>
    <string name="ordinary_account">Ordinary account</string>
    <string name="only_applies_to_buying_hdb_resale_flats">*Only applies to buying HDB resale flats</string>
    <string name="buyer_1">Buyer 1</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="select">Select</string>
    <string name="bal">balance</string>
    <string name="salary">Salary</string>
    <string name="home_calculator">Home Calculator</string>
    <string name="drop">drop</string>
    <string name="cal">cal</string>
    <string name="button">button</string>
    <string name="check_eligibilty">Check Eligibilty</string>
    <string name="available_grants">Available grants</string>
    <string name="cpf_housing_grants_for_hdb_flats">CPF Housing Grants for HDB Flats</string>
    <string name="temporary_loan_scheme">Temporary Loan Scheme</string>
    <string name="you_could_receive_cpf_housing_grants_of_up_to_80_000_to_help_finance_the_purchase_of_your_new_flat">You could receive CPF Housing Grants of up to $80,000 to help finance the purchase of your new flat.</string>
    <string name="the_temporary_loan_scheme_helps_ease_your_cash_flow_when_purchasing_a_new_flat_and_selling_your_current_one">The temporary loan scheme helps ease your cash flow when purchasing a new flat and selling your current one.</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">cancel</string>
    <string name="hdb_resale_flat">HDB Resale Flat</string>
    <string name="_356_990_00">$356,990.00</string>
    <string name="purchase_price">purchase price</string>
    <string name="loan_amount">Loan amount</string>
    <string name="loan_period_years">Loan period (years)</string>
    <string name="downpayment">Downpayment</string>
    <string name="monthly_installment">Monthly installment</string>
    <string name="annum">annum)</string>
    <string name="using_hdb_loan">(Using HDB Loan)</string>
    <string name="results">Results</string>
    <string name="possible_property">Possible property</string>
    <string name="_300_134_00">$300,134.00</string>
    <string name="_35_699_00">$35,699.00</string>
    <string name="_2_30">2.30 %</string>
    <string name="interest_rate_per">Interest rate (per</string>
    <string name="computation">Computation</string>
    <string name="_19">19</string>
    <string name="_2459_19">$2459.19</string>
    <string name="sq">sq</string>
    <string name="uid_k74565l_nbing_ok">UID: K74565L\nBing: Ok</string>
    <string name="phoebe_buffay">Phoebe Buffay</string>
    <string name="uid_r56784k_nme_sure">UID: R56784K\nMe: Sure</string>
    <string name="uid_t50678m_nphoebe_hmmm">UID: T50678M\nPhoebe: Hmmm</string>
    <string name="ross_geller">Ross Geller</string>
    <string name="chandler_bing">Chandler Bing</string>
    <string name="uid_j34920k_nmike_are_you_sure">UID: J34920K\nMike: Are you sure?</string>
    <string name="uid_k84483m_nme_yes"><![CDATA[UID: K84483M\nMe: Yes]]></string>
    <string name="uid_k74565l_nbing_ok1">UID: K74565L\nBing: Ok</string>
    <string name="uid_t50678m_nphoebe_hmmm1">UID: T50678M\nPhoebe: Hmmm</string>
    <string name="amy_green">Amy Green</string>
    <string name="uid_k84483m_nme_yes1"><![CDATA[UID: K84483M\nMe: Yes]]></string>
    <string name="mike_hanigan">Mike Hanigan</string>

    <string name="uid_r56784k_nme_sure1">UID: R56784K\nMe: Sure</string>

    <string name="uid_j34920k_nmike_are_you_sure1">UID: J34920K\nMike: Are you sure?</string>
    <string name="inbox">Inbox</string>

    <string name="profile1">profile1</string>
    <string name="profile2">profile2</string>
    <string name="profile">profile</string>

    <string name="required">required</string>
    <string name="grants">Grants</string>
    <string name="hou">hou</string>
    <string name="option">option</string>
    <string name="cam">cam</string>
    <string name="mic">mic</string>
    <string name="chat">chat</string>
    <string name="blocknum">Block No.</string>
    <string name="unitNum">Unit No.</string>
    <string name="street">Street/Avenue</string>
    <string name="bedroomNum">No. of bedrooms</string>
    <string name="nearestMRT">Nearest MRT(s)</string>
    <string name="addListing">Add</string>
    <string name="new_listing">New Listing</string>
    <string name="_5_0">5.0</string>
    <string name="monica_geller">Monica Geller</string>

    <string name="company_abc">Company ABC</string>
    <string name="_4_9">4.9</string>


    <string name="company_xyz">Company XYZ</string>
    <string name="star">star</string>
    <string name="todo">TODO</string>
    <string name="age">Age</string>

    <string name="property_price">Property price</string>
    <string name="price">Price</string>
    <string name="interest_rate">Interest rate</string>

    <string name="years">Years</string>

    <string name="buyer">Buyer</string>
    <string name="total_interest">Total interest</string>
    <string name="emi">EMI</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="delete_listings">Delete listings</string>
    <string name="done">Done</string>
    <string name="refresh">Refresh</string>
    <string name="tv_id">ID:</string>
    <string name="Block">Block:</string>
    <string name="Street">Street:</string>
    <string name="StoreyRange">Storey Range:</string>
    <string name="Town">Town:</string>
    <string name="Rooms">No. of Rooms:</string>
    <string name="FloorArea">Floor Area:</string>
    <string name="LeaseCommencementDate">Lease Commencement Date:</string>
    <string name="ResalePrice">Resale Price:</string>
    <string name="ReaminingLease">Remaining Lease:</string>
    <string name="FlatModel">Flat Model:</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="edit_storeyRange">Storey Range</string>
    <string name="edit_town">town</string>
    <string name="edit_floorArea">Floor Area</string>
    <string name="edit_flatModel">Flat Model</string>
    <string name="edit_leaseCommencementDate">Lease Year</string>
    <string name="edit_remainingLease">Remaining Lease</string>
    <string name="edit_resalePrice">Resale Price</string>

</resources>
