<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".HomeCalculator">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/main_toolbar"/>
        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Homecalc3">

            <TextView
                android:id="@+id/colourbox"
                android:layout_width="406dp"
                android:layout_height="87dp"
                android:background="@drawable/box2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="24dp"
                android:text="@string/home_calculator"
                android:textColor="#0D208C"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#cad5e3"
                android:contentDescription="@string/button"
                android:tint="#050505"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/abc_vector_test" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="380dp"
                android:layout_height="443dp"
                android:layout_marginTop="152dp"
                android:contentDescription="@string/sq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/box" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="156dp"
                android:text="@string/computation"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="224dp"
                android:layout_marginTop="152dp"
                android:text="@string/hdb_resale_flat"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginTop="180dp"
                android:text="@string/using_hdb_loan"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="184dp"
                android:text="@string/results"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="232dp"
                android:text="@string/possible_property"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="256dp"
                android:text="@string/purchase_price"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="304dp"
                android:text="@string/downpayment"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="352dp"
                android:text="@string/loan_amount"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="400dp"
                android:text="@string/loan_period_years"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="452dp"
                android:text="@string/interest_rate_per"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="476dp"
                android:text="@string/annum"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="528dp"
                android:text="@string/monthly_installment"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="552dp"
                android:text="@string/recquired"
                android:textColor="#192878"
                android:textColorHighlight="#131D59"
                android:textSize="19sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginTop="232dp"
                android:layout_marginEnd="60dp"
                android:text="@string/_356_990_00"
                android:textColor="#192878"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginTop="304dp"
                android:layout_marginEnd="60dp"
                android:text="@string/_35_699_00"
                android:textColor="#192878"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginTop="352dp"
                android:layout_marginEnd="60dp"
                android:text="@string/_300_134_00"
                android:textColor="#192878"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginTop="400dp"
                android:layout_marginEnd="60dp"
                android:text="@string/_19"
                android:textColor="#192878"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginTop="452dp"
                android:layout_marginEnd="60dp"
                android:text="@string/_2_30"
                android:textColor="#192878"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginTop="528dp"
                android:layout_marginEnd="60dp"
                android:text="@string/_2459_19"
                android:textColor="#192878"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>






